[package]
name = "vulkan-test"
version = "0.1.0"
authors = ["CursedFlames <18627001+CursedFlames@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.19.0"
winit = "0.22.2"
vulkano-win = "0.19.0"
vulkano-shaders = "0.19.0"
spin_sleep = "1.0.0"
